--- a/index.html
+++ b/index.html
@@ -87,6 +87,62 @@
           </div>
         </div>
       </section>
+      <section class="about">
+        <div class="about__bg-item">
+          <img
+            src="./img/about-bg-element.png"
+            alt="box"
+            class="about__bg-img"
+          />
+        </div>
+        <div class="about__bg-item2">
+          <img
+            src="./img/about-bg-element2.png"
+            alt="box"
+            class="about__bg-img"
+          />
+        </div>
+
+        <div class="container">
+          <h1 class="about__title">
+            Про нас <br />
+            Ukraine Support Fondation
+          </h1>
+          <p class="about__description">
+            Фонд» - громадська організація , заснована У 2022 році командою
+            <br />
+            волонтерів.. Цiлi фонду назбирати максимальну суму на допомогу ЗСУ
+            за <br />
+            мінімальний строк.
+          </p>
+          <p class="about__description">
+            Фонд» - громадська організація , заснована У 2022 році командою
+            <br />
+            волонтерів.. Цiлi фонду назбирати максимальну суму на допомогу ЗСУ
+            за <br />
+            мінімальний строк.
+          </p>
+        </div>
+        <div class="about__bg-box"></div>
+        <div class="about__bg-box2"></div>
+        <h2 class="about__subtitle">ЗАСНОВНИКИ ФОНДУ</h2>
+        <div class="about__box-item1">
+          <img src="./img/olexiy.png" alt="olexiy" class="about__photo" />
+          <p class="about__box-item-desc1">Олексій Дорошенко</p>
+        </div>
+        <div class="about__box-item2">
+          <img src="./img/taras.png" alt="taras" class="about__photo" />
+          <p class="about__box-item-desc2">Тарас Балінській</p>
+        </div>
+        <div class="about__box-item3">
+          <img src="./img/jesika.png" alt="jesika" class="about__photo" />
+          <p class="about__box-item-desc3">Джесіка Паркер</p>
+        </div>
+        <div class="about__box-item4">
+          <img src="./img/teodora.png" alt="teodora" class="about__photo" />
+          <p class="about__box-item-desc4">Теодора Левенко</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
