--- a/index.html
+++ b/index.html
@@ -126,22 +126,24 @@
         <div class="about__bg-box"></div>
         <div class="about__bg-box2"></div>
         <h2 class="about__subtitle">ЗАСНОВНИКИ ФОНДУ</h2>
-        <div class="about__box-item1">
-          <img src="./img/olexiy.png" alt="olexiy" class="about__photo" />
-          <p class="about__box-item-desc1">Олексій Дорошенко</p>
-        </div>
-        <div class="about__box-item2">
-          <img src="./img/taras.png" alt="taras" class="about__photo" />
-          <p class="about__box-item-desc2">Тарас Балінській</p>
-        </div>
-        <div class="about__box-item3">
-          <img src="./img/jesika.png" alt="jesika" class="about__photo" />
-          <p class="about__box-item-desc3">Джесіка Паркер</p>
-        </div>
-        <div class="about__box-item4">
-          <img src="./img/teodora.png" alt="teodora" class="about__photo" />
-          <p class="about__box-item-desc4">Теодора Левенко</p>
-        </div>
+        <ul class="about__list">
+          <li class="about__list-item">
+            <img src="./img/olexiy.png" alt="olexiy" class="about__photo" />
+            <p class="about__box-item-desc1">Олексій Дорошенко</p>
+          </li>
+          <li class="about__list-item">
+            <img src="./img/taras.png" alt="taras" class="about__photo" />
+            <p class="about__box-item-desc2">Тарас Балінській</p>
+          </li>
+          <li class="about__list-item">
+            <img src="./img/jesika.png" alt="jesika" class="about__photo" />
+            <p class="about__box-item-desc3">Джесіка Паркер</p>
+          </li>
+          <li class="about__list-item">
+            <img src="./img/teodora.png" alt="teodora" class="about__photo" />
+            <p class="about__box-item-desc4">Теодора Левенко</p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
