--- a/index.html
+++ b/index.html
@@ -88,26 +88,26 @@
         </div>
       </section>
       <section class="about">
-        <div class="about__bg-item">
-          <img
-            src="./img/about-bg-element.png"
-            alt="box"
-            class="about__bg-img"
-          />
-        </div>
-        <div class="about__bg-item2">
-          <img
-            src="./img/about-bg-element2.png"
-            alt="box"
-            class="about__bg-img"
-          />
-        </div>
-
         <div class="container">
-          <h1 class="about__title">
+          <div class="about__bg-item">
+            <img
+              src="./img/about-bg-element.png"
+              alt="box"
+              class="about__bg-img"
+            />
+          </div>
+          <div class="about__bg-item2">
+            <img
+              src="./img/about-bg-element2.png"
+              alt="box"
+              class="about__bg-img"
+            />
+          </div>
+
+          <h2 class="about__title">
             Про нас <br />
             Ukraine Support Fondation
-          </h1>
+          </h2>
           <p class="about__description">
             Фонд» - громадська організація , заснована У 2022 році командою
             <br />
@@ -123,27 +123,104 @@
             мінімальний строк.
           </p>
         </div>
-        <div class="about__bg-box"></div>
-        <div class="about__bg-box2"></div>
+
         <h2 class="about__subtitle">ЗАСНОВНИКИ ФОНДУ</h2>
         <ul class="about__list">
           <li class="about__list-item">
             <img src="./img/olexiy.png" alt="olexiy" class="about__photo" />
-            <p class="about__box-item-desc1">Олексій Дорошенко</p>
+            <p class="about__box-item-desc">Олексій Дорошенко</p>
           </li>
           <li class="about__list-item">
             <img src="./img/taras.png" alt="taras" class="about__photo" />
-            <p class="about__box-item-desc2">Тарас Балінській</p>
+            <p class="about__box-item-desc">Тарас Балінській</p>
           </li>
           <li class="about__list-item">
             <img src="./img/jesika.png" alt="jesika" class="about__photo" />
-            <p class="about__box-item-desc3">Джесіка Паркер</p>
+            <p class="about__box-item-desc">Джесіка Паркер</p>
           </li>
           <li class="about__list-item">
             <img src="./img/teodora.png" alt="teodora" class="about__photo" />
-            <p class="about__box-item-desc4">Теодора Левенко</p>
+            <p class="about__box-item-desc">Теодора Левенко</p>
           </li>
         </ul>
+      </section>
+      <section class="city">
+        <div class="container">
+          <h3 class="city__title">Львів-МІСТО ГЕРОЙ</h3>
+          <p class="city__desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </section>
+      <section class="information">
+        <div class="container">
+          <div class="information__left-block">
+            <img src="./img/inf-img.png" alt="heroes" />
+          </div>
+          <div class="information__right-block">
+            <h2 class="information__title">Інформація про збір</h2>
+            <p class="information__desc">
+              Зараз наша велика і дружна команда намагається назбирати на
+              байрактари,адже українська армія їх так потребує.Потрібно
+              назбирати 50 млн долларів.За допомогою нашої команди ми вже
+              назбирали половину тож приєднуйся й допоможи армії виграти.
+            </p>
+            <button class="information__btn">Підтримати</button>
+          </div>
+        </div>
+      </section>
+      <section class="city">
+        <div class="container">
+          <div class="city__bg-element">
+            <img src="./img/city_element.png" alt="element" class="city__img" />
+          </div>
+          <div class="city__bg-element-2">
+            <img
+              src="./img/city_element2.png"
+              alt="element"
+              class="city__img"
+            />
+          </div>
+          <h3 class="city__title">Харків-МІСТО ГЕРОЙ</h3>
+          <p class="city__desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </section>
+      <section class="support">
+        <div class="container">
+          <h2 class="support__title">Підтримай армію</h2>
+          <div class="support__block">
+            <ul class="support__list">
+              <li class="support__item">
+                <div class="support__left-block">
+                  <img
+                    src="./img/support-img.png"
+                    alt="support"
+                    class="support__img"
+                  />
+                  <div class="support__item-bg">
+                    <h4 class="support__text">Військова допомога</h4>
+                  </div>
+                </div>
+              </li>
+              <li class="support__item">
+                <div class="support__right-block">
+                  <img
+                    src="./img/support-img2.png"
+                    alt="support"
+                    class="support__img"
+                  />
+                  <div class="support__item-bg2">
+                    <h4 class="support__text">Гуманітарна допомога</h4>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
   </body>
