--- a/index.html
+++ b/index.html
@@ -38,51 +38,49 @@
     </header>
     <main>
       <section class="promo">
-        <div class="promo__overlay">
-          <div class="promo__bg-element">
-            <div class="container">
-              <h1 class="promo__title">Ukraine Support</h1>
-              <h2 class="promo__subtitle">Fondation</h2>
-              <p class="promo__desc">
-                Фонд» - громадська організація , заснована У 2022 році командою
-                волонтерів.. Цiлi фонду назбирати максимальну суму на допомогу
-                ЗСУ за мінімальний строк.
-              </p>
-              <button class="promo__button">Підтримати</button>
-              <ul class="promo__list">
-                <li class="promo__list-item">
-                  <a href="#" class="promo__link">Get started</a>
-                </li>
-                <li class="promo__list-item">
-                  <svg
-                    class="promo__svg"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="11"
-                    height="5"
-                    viewBox="0 0 11 5"
-                    fill="none"
-                  >
-                    <line
-                      x1="0.5"
-                      y1="-0.5"
-                      x2="5.90045"
-                      y2="-0.5"
-                      transform="matrix(0.78066 0.624956 -0.624434 0.781077 0.958252 1)"
-                      stroke="white"
-                      stroke-linecap="round"
-                    />
-                    <line
-                      x1="0.5"
-                      y1="-0.5"
-                      x2="5.90045"
-                      y2="-0.5"
-                      transform="matrix(-0.78066 0.624956 0.624434 0.781077 10.9514 1)"
-                      stroke="white"
-                      stroke-linecap="round"
-                    />
-                  </svg>
-                </li>
-              </ul>
+        <div class="promo__bg-element">
+          <div class="container">
+            <h1 class="promo__title">Ukraine Support</h1>
+            <h2 class="promo__subtitle">Fondation</h2>
+            <p class="promo__desc">
+              Фонд» - громадська організація , заснована У 2022 році командою
+              волонтерів.. Цiлi фонду назбирати максимальну суму на допомогу ЗСУ
+              за мінімальний строк.
+            </p>
+            <button class="promo__button">Підтримати</button>
+            <div class="promo__block">
+              <div class="promo__block-item">
+                <a href="#" class="promo__link">Get started</a>
+              </div>
+              <div class="promo__block-item">
+                <svg
+                  class="promo__svg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="11"
+                  height="5"
+                  viewBox="0 0 11 5"
+                  fill="none"
+                >
+                  <line
+                    x1="0.5"
+                    y1="-0.5"
+                    x2="5.90045"
+                    y2="-0.5"
+                    transform="matrix(0.78066 0.624956 -0.624434 0.781077 0.958252 1)"
+                    stroke="white"
+                    stroke-linecap="round"
+                  />
+                  <line
+                    x1="0.5"
+                    y1="-0.5"
+                    x2="5.90045"
+                    y2="-0.5"
+                    transform="matrix(-0.78066 0.624956 0.624434 0.781077 10.9514 1)"
+                    stroke="white"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
         </div>
@@ -219,6 +217,181 @@
                 </div>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+      <section class="city">
+        <h3 class="city__title">Київ-МІСТО ГЕРОЙ</h3>
+        <p class="city__desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </section>
+      <section class="offers">
+        <div class="container">
+          <h2 class="offers__title">Ігри</h2>
+          <div class="offers__top-choice-block">
+            <svg
+              class="offers__left-btn"
+              xmlns="http://www.w3.org/2000/svg"
+              width="31"
+              height="30"
+              viewBox="0 0 31 30"
+              fill="none"
+            >
+              <path
+                d="M29.4839 15.0627C29.4839 22.6049 23.1409 28.7785 15.2419 28.7785C7.34293 28.7785 1 22.6049 1 15.0627C1 7.52056 7.34293 1.34698 15.2419 1.34698C23.1409 1.34698 29.4839 7.52056 29.4839 15.0627Z"
+                stroke="#FFD76E"
+                stroke-width="2"
+              />
+              <line
+                x1="1"
+                y1="-1"
+                x2="17.2034"
+                y2="-1"
+                transform="matrix(0.823173 -0.56779 0.714339 0.6998 6.35425 16.569)"
+                stroke="#FFD76E"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="1"
+                y1="-1"
+                x2="17.2034"
+                y2="-1"
+                transform="matrix(0.823173 0.56779 -0.714339 0.6998 5.08057 15.5186)"
+                stroke="#FFD76E"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+            </svg>
+            <div class="offers__item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+              <h4 class="offers__desc">Бандерогусь</h4>
+            </div>
+            <div class="offers__item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+              <h4 class="offers__desc">Висвободи острів Зміїний</h4>
+            </div>
+            <div class="offers__item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+              <h4 class="offers__desc">Морський бій</h4>
+              <svg
+                class="offers__right-btn"
+                xmlns="http://www.w3.org/2000/svg"
+                width="31"
+                height="30"
+                viewBox="0 0 31 30"
+                fill="none"
+              >
+                <path
+                  d="M1.51613 15.2333C1.51613 7.69117 7.85906 1.51759 15.7581 1.51759C23.6571 1.51759 30 7.69117 30 15.2333C30 22.7755 23.6571 28.9491 15.7581 28.9491C7.85906 28.9491 1.51613 22.7755 1.51613 15.2333Z"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                />
+                <line
+                  x1="1"
+                  y1="-1"
+                  x2="17.2034"
+                  y2="-1"
+                  transform="matrix(-0.823173 0.56779 -0.714339 -0.6998 24.646 13.7272)"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <line
+                  x1="1"
+                  y1="-1"
+                  x2="17.2034"
+                  y2="-1"
+                  transform="matrix(-0.823173 -0.56779 0.714339 -0.6998 25.9194 14.7775)"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </div>
+          </div>
+          <h2 class="offers__bottom-title">Купи товар і допоможи ЗСУ</h2>
+          <div class="offers__bottom-choice-block">
+            <svg
+              class="offers__left-bottom-btn"
+              xmlns="http://www.w3.org/2000/svg"
+              width="31"
+              height="30"
+              viewBox="0 0 31 30"
+              fill="none"
+            >
+              <path
+                d="M29.4839 15.0627C29.4839 22.6049 23.1409 28.7785 15.2419 28.7785C7.34293 28.7785 1 22.6049 1 15.0627C1 7.52056 7.34293 1.34698 15.2419 1.34698C23.1409 1.34698 29.4839 7.52056 29.4839 15.0627Z"
+                stroke="#FFD76E"
+                stroke-width="2"
+              />
+              <line
+                x1="1"
+                y1="-1"
+                x2="17.2034"
+                y2="-1"
+                transform="matrix(0.823173 -0.56779 0.714339 0.6998 6.35425 16.569)"
+                stroke="#FFD76E"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <line
+                x1="1"
+                y1="-1"
+                x2="17.2034"
+                y2="-1"
+                transform="matrix(0.823173 0.56779 -0.714339 0.6998 5.08057 15.5186)"
+                stroke="#FFD76E"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+            </svg>
+            <div class="offers__bottom-item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+            </div>
+            <div class="offers__bottom-item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+            </div>
+            <div class="offers__bottom-item">
+              <img src="./img/offers-item.png" alt="box" class="offers__img" />
+
+              <svg
+                class="offers__right-bottom-btn"
+                xmlns="http://www.w3.org/2000/svg"
+                width="31"
+                height="30"
+                viewBox="0 0 31 30"
+                fill="none"
+              >
+                <path
+                  d="M1.51613 15.2333C1.51613 7.69117 7.85906 1.51759 15.7581 1.51759C23.6571 1.51759 30 7.69117 30 15.2333C30 22.7755 23.6571 28.9491 15.7581 28.9491C7.85906 28.9491 1.51613 22.7755 1.51613 15.2333Z"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                />
+                <line
+                  x1="1"
+                  y1="-1"
+                  x2="17.2034"
+                  y2="-1"
+                  transform="matrix(-0.823173 0.56779 -0.714339 -0.6998 24.646 13.7272)"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <line
+                  x1="1"
+                  y1="-1"
+                  x2="17.2034"
+                  y2="-1"
+                  transform="matrix(-0.823173 -0.56779 0.714339 -0.6998 25.9194 14.7775)"
+                  stroke="#FFD76E"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </div>
           </div>
         </div>
       </section>
